# mpc

./: .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.txt  INSTALL.md  MODULE.bazel  Makefile  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac  lex.c  lex.h  libmpc.pc.in  mpc.c  mpc.h  mpc.pc  mpc_optimise.h  package.json  pcq.c  pcq.h  pcq.pc  syntax-coloration-kate.xml
.clusterfuzzlite/: Dockerfile  build.sh  fuzzer.c
.github/hooks/: post-merge
.github/workflows/: cflite_pr.yml  ci.yml
examples/: a.out  book.doge  doge.c  foobar.c  lex.c  line_reader.c  lispy.c  maths.c  prelude.lspy  smallc.c  so_c.doge  tree_traversal.c
fuzz/: doge_file_fuzzer.c  doge_fuzzer.c  lispy_fuzzer.c  math_file_fuzzer.c  math_fuzzer.c  smallc_fuzzer.c
fuzz/doge_out/: plot_data
fuzz/smallc_input/: fib.smallc  minimal.smallc  smallc_bnf
fuzz_rep_220110/: test-dynamic  test-file  test-static
fuzz_rep_220110/doge_input/: doge_bnf
fuzz_rep_220110/doge_out/default/: cmdline  fuzzer_stats  plot_data
fuzz_rep_220110/doge_out/default/crashes/: README.txt  id:000000,sig:11,src:001085,time:10308702,execs:2820086,op:havoc,rep:2  id:000001,sig:11,src:001110,time:10453667,execs:2861979,op:havoc,rep:4  id:000003,sig:11,src:001110+000141,time:12413806,execs:3416184,op:splice,rep:4  id:000004,sig:11,src:001106,time:13750642,execs:3769998,op:havoc,rep:8  id:000005,sig:11,src:001275,time:13806749,execs:3786308,op:havoc,rep:2  id:000006,sig:11,src:001275,time:13809937,execs:3787180,op:havoc,rep:4  id:000007,sig:11,src:001275,time:13813149,execs:3788060,op:havoc,rep:4  id:000008,sig:11,src:001275,time:13816758,execs:3789040,op:havoc,rep:4  id:000009,sig:11,src:001275,time:13827722,execs:3792129,op:havoc,rep:2  id:000011,sig:11,src:001277,time:14932917,execs:4087987,op:havoc,rep:4  (+8 more)
fuzz_rep_220110/examples/: doge  foobar  line_reader  lispy  maths  smallc  tree_traversal
fuzz_rep_220110/fuzz/: doge_fuzzer  math_fuzzer
fuzz_rep_220110/math_exprs/: readme.maths  simple.maths
fuzz_rep_220110/math_out/default/: plot_data
hidden/: mpc_internal.h
m4/: .gitignore
src/: .gitignore  Makefile.am  mpc.c  mpc.h
tests/: combinators.c  core.c  doge1.grammar  doge2.grammar  grammar.c  ident.c  math.c  maths.grammar  ptest.c  ptest.h  regex.c  test.c
tests/fuzzing/: mpc_re_mode_fuzzer.c
(+4338 files in other folders)
